Update session icon on notification bell

Summary:
Change the icon of the session when a `bel` is triggered as a visually alert

BUG: 399140
FIXED-IN: 18.12

Test Plan:
1. Start Konsole and create 2 sessions (tabs) from the same profile
     (for example, the default profile)
2. In one tab run `sleep 3; tput bel`
3. Switch to the other tab and wait 3 seconds

Reviewers: #konsole, konsole-devel, hindenburg, ngraham

Reviewed By: ngraham

Subscribers: ngraham, konsole-devel, #konsole

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D16511